launchpad-buildd (195) UNRELEASED; urgency=medium

  * sbuild-package: Temporarily remove lxd group membership (LP: #1820348).
  * Tolerate missing "apt-get indextargets" on trusty.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 05 Mar 2021 13:39:19 +0000

launchpad-buildd (194) bionic; urgency=medium

  [ Colin Watson ]
  * Stop setting $mailto in .sbuildrc, to work around LP #1859010.
  * Stop overquoting OCI --build-arg options (LP: #1902007).
  * Update production deployment documentation in README.

  [ Tom Wardill ]
  * Fix OCI builds that don't pull another image. 

 -- Tom Wardill <tom.wardill@canonical.com>  Thu, 07 Jan 2021 10:02:27 +0000

launchpad-buildd (193) bionic; urgency=medium

  * Fix handling of bytes arguments passed to BuildManager.runSubProcess.
  * Fix bytes/text handling in RecipeBuilder.buildTree.
  * Fix check-implicit-pointer-functions on Python 3: build logs aren't
    necessarily UTF-8, so process them as bytes (LP: #1897461).

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 28 Sep 2020 13:18:50 +0100

launchpad-buildd (192) bionic; urgency=medium

  * Update Maintainer to launchpad-dev.
  * Handle bytes in shell_escape, fixing recipe builds on Python 3.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 23 Sep 2020 23:49:35 +0100

launchpad-buildd (191) bionic; urgency=medium

  [ Colin Watson ]
  * Fix version checks for deployments using Python 3.

  [ Tom Wardill ]
  * Fix proxy token revocation on Python 3.

  [ Thiago F. Pappacena ]
  * Add support for --build-arg when building OCI images (LP: #1892351).

 -- Tom Wardill <tom.wardill@canonical.com>  Thu, 17 Sep 2020 16:08:58 +0100

launchpad-buildd (190) bionic; urgency=medium

  [ Colin Watson ]
  * Switch to git; add Vcs-* fields.
  * Always call Resource.putChild with path as bytes.
  * Switch RotatableFileLogObserver from class advice to a class decorator.
  * Work around /proc/self/fd-related test hang on Python >= 3.3.