@@ -2,6 +2,8 @@
 *.pyc
 .pybuild
 buildd-slave-example.conf
+charm/dist
+charm/tmp
 dist
 debian/debhelper-build-stamp
 debian/files
